# drift-lens

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: environment.yml
data/: ontology.json
scripts/: train_grpo_gemma2.sh  train_grpo_phi4.sh  train_grpo_qwen3.sh
src/symbolic_drift/: __init__.py  clients.py  interventions.py  judges.py  metrics.py  prompts.py  reward.py
src/symbolic_drift/data/: generate_closed_source.py  generate_open_source.py  prepare.py
src/symbolic_drift/evaluation/: closed_source.py  vllm_inference.py
