[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "symbolic_drift"
version = "0.1.0"
description = "Symbolic Drift: measuring reasoning robustness via symbolic alignment metrics (DTW, SRI, FDI, ROD)."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "The SymbolicDrift Authors" }]
keywords = ["llm", "reasoning", "robustness", "rlhf", "grpo", "evaluation"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.26",
    "pandas>=2.0",
    "scipy>=1.11",
    "scikit-learn>=1.3",
    "fastdtw>=0.3.4",
    "Levenshtein>=0.20",
    "transformers>=4.40",
    "torch>=2.1",
    "sentence-transformers>=2.2",
    "textstat>=0.7",
    "datasets>=2.14",
]

[project.optional-dependencies]
bedrock = ["boto3>=1.34"]
vllm = ["vllm>=0.5"]
dev = ["pytest>=7", "ruff>=0.4"]

[project.urls]
Dataset = "https://huggingface.co/datasets/sata-bench/SymbolicDrift"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
symbolic_drift = ["data/*.json"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]
